fix header layout problem

--- a/app/less/drtv-header.less
+++ b/app/less/drtv-header.less
@@ -62,7 +62,7 @@ cm-header{
 }
 
 /** Do Not Touch - Performance Alternative to JS Directive - used in PURLS **/
-header{
+header.menu{
   display:block;
   position:fixed;
   top:0;
